uefi-macros/tests/ui/fail/entry_bad_abi.rs
#![no_main]

use uefi::prelude::*;

#[entry]
extern "C" fn main() -> Status {
    Status::SUCCESS
}
