uefi-macros/tests/ui/fail/entry_bad_abi.stderr
error: Entry function must have no ABI modifier
 --> tests/ui/fail/entry_bad_abi.rs:6:1
  |
6 | extern "C" fn main() -> Status {
  | ^^^^^^
